# game-table

./: README.md  docker-compose.yml
backend/: .env  Cargo.toml
backend/migrations/: 001_create_game.up.sql  001_create_games.up.sql  002_create_board.up.sql  002_create_score.up.sql  003_create_score.up.sql  003_create_users.up.sql
backend/src/: main.rs  response.rs  utils.rs
backend/src/api/: auth.rs  board.rs  game.rs  mod.rs  score.rs
backend/src/middlewares/: auth.rs
backend/src/model/: board.rs  game.rs  mod.rs  score.rs  user.rs
backend/src/repository/: board.rs  game.rs  mod.rs  score.rs  user.rs
backend/src/service/: token.rs
frontend/: package-lock.json  package.json
nginx/: nginx.conf
