[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenvy = "0.15.7"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "uuid", "macros"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.188", features = ["derive"] }
rand = "0.8.5"
jsonwebtoken = "9.0.0"
chrono = "0.4.31"
cookie = "0.18.0"
